// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graph getInstance(atom) returns the instance 1`] = `
{
  "atom1": {
    "className": "StoreAtomInstance",
    "observers": {
      "ion1": {
        "flags": 9,
        "operation": "getNode",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
  "atom2": {
    "className": "StoreAtomInstance",
    "observers": {
      "ion1": {
        "flags": 9,
        "operation": "getNode",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 2,
    "status": "Active",
    "weight": 1,
  },
  "ion1": {
    "className": "StoreAtomInstance",
    "observers": {},
    "sources": {
      "atom1": {
        "flags": 9,
        "operation": "getNode",
        "p": undefined,
      },
      "atom2": {
        "flags": 9,
        "operation": "getNode",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 1,
  },
}
`;

exports[`graph injectAtomGetters 1`] = `
{
  "@component(Test)-:r0:": {
    "observers": [],
    "sources": [
      {
        "key": "atom4",
        "operation": "useAtomValue",
      },
    ],
    "weight": 4,
  },
  "@component(Test)-:r1:": {
    "observers": [],
    "sources": [
      {
        "key": "atom4",
        "operation": "useAtomInstance",
      },
    ],
    "weight": 1,
  },
  "atom1": {
    "observers": [
      {
        "key": "atom4",
        "operation": "get",
      },
    ],
    "sources": [],
    "weight": 1,
  },
  "atom2": {
    "observers": [],
    "sources": [],
    "weight": 1,
  },
  "atom3": {
    "observers": [
      {
        "key": "atom4",
        "operation": "get",
      },
    ],
    "sources": [],
    "weight": 1,
  },
  "atom4": {
    "observers": [
      {
        "key": "@component(Test)-:r0:",
        "operation": "useAtomValue",
      },
      {
        "key": "@component(Test)-:r1:",
        "operation": "useAtomInstance",
      },
    ],
    "sources": [
      {
        "key": "atom1",
        "operation": "get",
      },
      {
        "key": "atom3",
        "operation": "get",
      },
    ],
    "weight": 3,
  },
}
`;

exports[`graph injectAtomGetters 2`] = `
{
  "@component(Test)-:r0:": {
    "atom4": {
      "atom1": {},
      "atom3": {},
    },
  },
  "@component(Test)-:r1:": {
    "atom4": {
      "atom1": {},
      "atom3": {},
    },
  },
  "atom2": {},
  "atom4": {
    "atom1": {},
    "atom3": {},
  },
}
`;

exports[`graph injectAtomGetters 3`] = `
{
  "atom1": {
    "atom4": {
      "@component(Test)-:r0:": {},
      "@component(Test)-:r1:": {},
    },
  },
  "atom2": {},
  "atom3": {
    "atom4": {
      "@component(Test)-:r0:": {},
      "@component(Test)-:r1:": {},
    },
  },
}
`;

exports[`graph on reevaluation, get() updates the graph 1`] = `
{
  "a": {
    "className": "StoreAtomInstance",
    "observers": {
      "d": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
    },
    "sources": {},
    "state": "a",
    "status": "Active",
    "weight": 1,
  },
  "b-["b"]": {
    "className": "StoreAtomInstance",
    "observers": {
      "d": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": "b",
    "status": "Active",
    "weight": 1,
  },
  "d": {
    "className": "StoreAtomInstance",
    "observers": {},
    "sources": {
      "a": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
      "b-["b"]": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": "ab",
    "status": "Active",
    "weight": 3,
  },
}
`;

exports[`graph on reevaluation, get() updates the graph 2`] = `
{
  "a": {
    "className": "StoreAtomInstance",
    "observers": {
      "d": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
    },
    "sources": {},
    "state": "a",
    "status": "Active",
    "weight": 1,
  },
  "b-["b"]": {
    "className": "StoreAtomInstance",
    "observers": {},
    "sources": {},
    "state": "b",
    "status": "Stale",
    "weight": 1,
  },
  "c": {
    "className": "StoreAtomInstance",
    "observers": {
      "d": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": "c",
    "status": "Active",
    "weight": 1,
  },
  "d": {
    "className": "StoreAtomInstance",
    "observers": {},
    "sources": {
      "a": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
      "c": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": "ac",
    "status": "Active",
    "weight": 3,
  },
}
`;
